# Image-Processing-Project

./: .gitignore  CMakeLists.txt  Compression.cpp  Compression.h  Image.cpp  Image.h  Project1.vcxproj  Project1.vcxproj.filters  README.md  app.h  driver.cpp  main.cpp  networktransfer.cpp  networktransfer.h  output.ppm  qoi.cpp  qoi.h  test_checkerboard.ppm  test_gradient.ppm  test_random.ppm  test_solid.ppm
Picture/x64/Debug/: Picture.exe.recipe  Picture.ilk  Project1.vcxproj.FileListAbsolute.txt  vc145.idb
Picture/x64/Debug/Picture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Picture.lastbuildstate  Picture.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
